--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 
 dependencies = ["numpy"]
 
+
 requires-python = ">= 3.10"
 authors = [
     { name = "Moritz Sallermann", email = "mos19@hi.is" },
@@ -11,6 +12,12 @@ authors = [
 ]
 
 license-files = ["LICEN[CS]E*"]
+
+[project.scripts]
+mpipi-builder = "mpipi_lammps_gen.gui.main:main"
+
+[project.optional-dependencies]
+gui = ["pyside6"]
 
 [tool.pyright]
 include = ["src/mpipi_lammps_gen"]
