--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ license-files = ["LICEN[CS]E*"]
 
 [project.scripts]
 df_to_fasta = "mpipi_lammps_gen.scripts.data_frame_to_fasta:main"
+df_to_af_server = "mpipi_lammps_gen.scripts.data_frame_to_af_server:main"
 
 
 [tool.pyright]
